--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,23 @@
 <!doctype html>
-<html lang="en" data-framework="es6">
-	<head>
-		<meta charset="utf-8">
-		<title>Svelte • TodoMVC</title>
-		<link rel="stylesheet" href="todomvc-app-css.css">
-	</head>
-	<body>
-		<section class="todoapp"></section>
-		<footer class="info">
-			<p>Double-click to edit a todo</p>
-			<p>Based on by <a href="http://todomvc.com">TodoMVC</a> by Rich Harris.</p>
-		</footer>
-		<script src="bundle.js"></script>
-		<script src="todomvc-common.js"></script>
-		<link rel="stylesheet" href="todomvc-common.css">
-	</body>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<title>Svelte • TodoMVC</title>
+	<link rel="stylesheet" href="todomvc-app-css.css">
+	<meta name='viewport' content='width=device-width,initial-scale=1'>
+</head>
+
+<body>
+	<section class="todoapp"></section>
+	<footer class="info">
+		<p>Double-click to edit a todo</p>
+		<p>Based on by <a href="http://todomvc.com">TodoMVC</a> by Rich Harris.</p>
+	</footer>
+	<script src="/build/bundle.js"></script>
+	<script src="todomvc-common.js"></script>
+	<link rel="stylesheet" href="todomvc-common.css">
+
+</body>
+
 </html>
