allow multiple todo instances at once
- automerge needs to only be init'd once (otherwise weird things seem to happen)

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>Svelte • TodoMVC</title>
 	<link rel="stylesheet" href="todomvc-app-css.css">
+	<link rel="stylesheet" href="/build/bundle.css" />
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 </head>
 
